--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,49 +1,28 @@
-name: TestAndBuild
+name: Publish Python 🐍 distributions 📦 to PyPI
+
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
+  build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦 to PyPI
+    runs-on: ubuntu-18.04
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@master
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
       with:
-        python-version: 3.8
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        pytest
-
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Build distribution
-      run: |
+        python-version: '3.10'
+    - name: Install pypa/setuptools
+      run: >-
+        python -m
+        pip install wheel
+    - name: Build a binary wheel
+      run: >-
         python setup.py sdist bdist_wheel
-
-    - name: Upload to PyPI
-      uses: pypa/gh-action-pypi-publish@release-v2
+    - name: Publish distribution 📦 to PyPI
+      uses: pypa/gh-action-pypi-publish@master
       with:
-        user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
